# python-project-52

./: .env  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: .gitignore  permission_mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/core/: asgi.py  permission_mixins.py  settings.py  urls.py  wsgi.py
task_manager/core/tests/: core_test_case.py  test_authsystem.py  test_homepage.py
task_manager/fixtures/: redirect_routes.json  test_labels.json  test_status.json  test_tasks.json  test_users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_options_remove_status_updated_at_and_more.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_taskandlabelnode_task_labels.py  0003_alter_task_performer.py  0003_alter_task_status.py  (+1 more)
task_manager/templates/: base.html  delete.html  form.html  home.html  list_objects.html  login.html  status_table.html  task_detail.html  tasks_table.html  users_table.html
task_manager/tests/: test_task_manager_root_routes.py  test_users_CRUD.py  tests.py
task_manager/users/: admin.py  forms.py  models.py  permissions_mixins.py  tests.py  urls.py  views.py
(+21 files in other folders)
