[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Daniil Balabanov <spacewalrus@bk.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.1"
flake8 = "7.0.0"
gunicorn = "^21.2.0"
dj-database-url = "^2.1.0"
python-dotenv = "^1.0.0"
django-bootstrap5 = "^23.3"
django-extensions = "^3.2.3"
whitenoise = "^6.6.0"
django-filter = "^23.5"
django-debug-toolbar = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
